--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,7 @@
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
+                    <finalName>skygram</finalName>
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
