--- a/src/main/resources/logging.properties
+++ b/src/main/resources/logging.properties
@@ -15,10 +15,10 @@
 # Note that these classes must be on the system classpath.
 # By default we only configure a ConsoleHandler, which will only
 # show messages at the INFO and above levels.
-handlers= java.util.logging.ConsoleHandler
+#handlers= java.util.logging.ConsoleHandler
 
 # To also add the FileHandler, use the following line instead.
-#handlers= java.util.logging.FileHandler, java.util.logging.ConsoleHandler
+handlers= java.util.logging.FileHandler, java.util.logging.ConsoleHandler
 
 # Default global logging level.
 # This specifies which kinds of events are logged across
@@ -34,7 +34,8 @@ handlers= java.util.logging.ConsoleHandler
 ############################################################
 
 # default file output is in user's home directory.
-java.util.logging.FileHandler.pattern = out.log
+java.util.logging.FileHandler.pattern = %h/AppData/Roaming/Skygram/output-%u.log
+java.util.logging.FileHandler.level = INFO
 java.util.logging.FileHandler.limit = 50000
 java.util.logging.FileHandler.count = 1
 java.util.logging.FileHandler.formatter = java.util.logging.SimpleFormatter
@@ -47,7 +48,7 @@ java.util.logging.ConsoleHandler.formatter = java.util.logging.SimpleFormatter
 # to print one-line log message like this:
 #     <level>: <log message> [<date/time>]
 #
-# java.util.logging.SimpleFormatter.format=%4$s: %5$s [%1$tc]%n
+java.util.logging.SimpleFormatter.format=%1$tY-%1$tm-%1$td %1$tH:%1$tM:%1$tS:%1$tL %4$-6s %2$s %5$s%6$s%n
 
 ############################################################
 # Facility specific properties.
