--- a/src/main/resources/logging.properties
+++ b/src/main/resources/logging.properties
@@ -34,7 +34,7 @@ handlers= java.util.logging.FileHandler, java.util.logging.ConsoleHandler
 ############################################################
 
 # default file output is in user's home directory.
-java.util.logging.FileHandler.pattern = %h/AppData/Roaming/Skygram/output-%u.log
+java.util.logging.FileHandler.pattern = %h/AppData/Roaming/Skygram/output-%g.log
 java.util.logging.FileHandler.level = INFO
 java.util.logging.FileHandler.limit = 50000
 java.util.logging.FileHandler.count = 1
