--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,13 @@
 
     <groupId>org.formatko</groupId>
     <artifactId>skygram</artifactId>
-    <version>0.5</version>
+    <version>0.6</version>
 
     <dependencies>
         <dependency>
             <groupId>com.samczsun</groupId>
             <artifactId>skype4j</artifactId>
-            <version>0.1.5</version>
+            <version>0.2.0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -22,7 +22,7 @@
         <dependency>
             <groupId>pro.zackpollard.telegrambot.api</groupId>
             <artifactId>jtelegram-botapi</artifactId>
-            <version>(1.3.1,)</version>
+            <version>1.4.1</version>
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
