--- a/src/main/resources/logging.properties
+++ b/src/main/resources/logging.properties
@@ -15,10 +15,7 @@
 # Note that these classes must be on the system classpath.
 # By default we only configure a ConsoleHandler, which will only
 # show messages at the INFO and above levels.
-#handlers= java.util.logging.ConsoleHandler
-
-# To also add the FileHandler, use the following line instead.
-handlers= java.util.logging.FileHandler, java.util.logging.ConsoleHandler
+handlers= java.util.logging.ConsoleHandler
 
 # Default global logging level.
 # This specifies which kinds of events are logged across
@@ -26,19 +23,13 @@ handlers= java.util.logging.FileHandler, java.util.logging.ConsoleHandler
 # can be overriden by a facility specific level
 # Note that the ConsoleHandler also has a separate level
 # setting to limit messages printed to the console.
-.level= INFO
+.level= FINE
 
 ############################################################
 # Handler specific properties.
 # Describes specific configuration info for Handlers.
 ############################################################
 
-# default file output is in user's home directory.
-java.util.logging.FileHandler.pattern = %h/AppData/Roaming/Skygram/output-%g.log
-java.util.logging.FileHandler.level = INFO
-java.util.logging.FileHandler.limit = 50000
-java.util.logging.FileHandler.count = 1
-java.util.logging.FileHandler.formatter = java.util.logging.SimpleFormatter
 
 # Limit the message that are printed on the console to INFO and above.
 java.util.logging.ConsoleHandler.level = INFO
@@ -57,4 +48,4 @@ java.util.logging.SimpleFormatter.format=%1$tY-%1$tm-%1$td %1$tH:%1$tM:%1$tS:%1$
 
 # For example, set the com.xyz.foo logger to only log SEVERE
 # messages:
-#com.xyz.foo.level = SEVERE
+fr.delthas.skype.level = FINEST
